test/Fail/Issue2363.err
Issue2363.agda:8.1-9.21: error: [WithClausePatternMismatch]
With clause pattern zero is not an instance of its parent pattern
suc n
when checking that the clause
test (suc n) with zero
test zero | q = zero
has type Nat → Nat
